manifests/k8s.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: sample
  namespace: serverless
  labels:
    k8s-app: "sample"
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: "sample"
  template:
    metadata:
      labels:
        k8s-app: "sample"
    spec:
      imagePullSecrets:
        - name: primeapps-registry-sample
      containers:
        - name: sample
          image: registry.primeapps.io/sampleuser/sample:1.0.0
          readinessProbe:
            httpGet:
              path: /
              port: 80
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 30
            timeoutSeconds: 2
            successThreshold: 1
            failureThreshold: 1
---
kind: Service
apiVersion: v1
metadata:
  name: sample-service
  namespace: serverless
spec:
  type: "ClusterIP"
  selector:
    k8s-app: "sample"
  ports:
    - name: "http"
      protocol: TCP
      port: 80
      targetPort: 80
---
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: sample-ingress
  namespace: serverless
  annotations:
    kubernetes.io/ingress.class: nginx
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/server-snippet: |-
      add_header X-Robots-Tag "noindex, nofollow";
spec:
  tls:
    - hosts:
        - sample.primeapps.net
      secretName: sample-letsencrypt
  rules:
    - host: sample.primeapps.net
      http:
        paths:
          - path: "/"
            backend:
              serviceName: sample-service
              servicePort: 80
